[package]
name = "chainless-lb-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
pingora = { version = "0.6.0", features = ["lb", "proxy"] }
pingora-proxy = "0.6.0"
pingora-load-balancing = "0.6.0"
auth-framework = "0.4.2"
moka = { version = "0.12.11", features = ["future"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde_json = "1.0.145"
async-trait = "0.1.89"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15"
serde_yaml = "0.9"
governor = "0.6.3"
opentelemetry = { version = "0.31.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
