[package]
name = "example-full-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "full_server"
path = "main.rs"

[dependencies]
chainless-lb-backend = { path = "../../backend" }
tracing = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
