[package]
name = "example-grpc-forward"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "grpc_forward"
path = "main.rs"

[dependencies]
chainless-lb-backend = { path = "../../backend" }
tracing = "0.1"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.12.3"
prost = "0.13.4"
