[package]
name = "example-metrics-export"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "metrics_export"
path = "main.rs"

[dependencies]
chainless-lb-backend = { path = "../../backend" }
tracing = "0.1"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
